# Lara

./: .gitignore  MANIFEST.in  README.md  imgui.ini  setup.py
lara/: CMakeLists.txt  lara.py  lara_ws.py  lara_ws_k4a.py  lara_ws_k4a.py.save  lara_ws_k4a_audio.py
lara/src/: index.html  kinect.cpp  kinect.hpp  main.cpp  microphone.cpp  microphone.hpp  thermal.cpp  thermal.hpp
lara/templates/: index.html  index_k4a.html  index_k4a_audio.html
